--- a/sections/Appendix/Physics/FlourTestJones.tex
+++ b/sections/Appendix/Physics/FlourTestJones.tex
@@ -23,13 +23,38 @@ coupled with all the respective distances. Each test is also complemented with
 width between the middle of the turret, and the point the projectile hit.
 
 \subsection{Set 1}
-The data from the first data set can be seen below in \autoref{FTest1}. 
+The data from the first data set can be seen below in \autoref{table:FTest1}. 
 \dataTable{FlourTest1}{Angle/Distance relationship coupled with spread.}{FTest1} 
 
 \subsection{Set 2}
-The data from the second data set can be seen below in \autoref{FTest2}. 
+The data from the second data set can be seen below in \autoref{table:FTest2}. 
+\dataTable{FlourTest2}{Angle/Distance relationship coupled with
+spread.}{FTest2}
 
-\section{Data Interpretation}
+\section{Data Interpretation: Width Spread}
+From the data it can be seen that the distance the projectile has to travel
+decreases the chances of accurately hitting the target.The average spread for
+each set is shown below in \autoref{table:AVGSpread}.
+
+\dataTable{AVGSpread}{Average spread recorded in the two data sets.}{AVGSpread}
+
+While it is not a linear increase in spread, the locations further away had
+considerably more spread that those which were closer. 
+
+\section{Data Interpretation: Length Spread}
+Another problem with the accuracy of the turret lies in the fact that there is a
+variety in the distance the projectile will travel at a given angle. This is shown below in
+\autoref{AngleVsDistSpread}, where the average spread in distance increases the
+farther the projectile should be fired. In addition it has also been noted that
+the turret has a chance to misfire. When this happens, the projectile will not
+follow its usual arch, and will travel a considerately shorter distance.
+
+\dataTable{AngleVsDistSpread}{Average spread recorded in the two data
+sets.}{AngleVsDistSpread}
+
+The data shown in \autoref{AngleVsDistSpread} was calculated by looking at all
+of the recorded distances.
+As stated, the turret has a chance to misfire. 
 
 
 \section{Conclusion}
