--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -15,6 +15,7 @@
 
 \part{Design}
 \input{sections/Design/Design.tex}
+\input{sections/Design/BNDesig/DesignBN.tex}
 
 \part{Implementation}
 \input{sections/Implementation/Implementation.tex}
