- Comments now appear in code examples  - Speed test table is not consistant with the rest  - Hit test is added and needs to be read

--- a/sections/Implementation/Tracking.tex
+++ b/sections/Implementation/Tracking.tex
@@ -11,9 +11,9 @@ capable of determining the direction of the target. The variables
 for this feature can be found under section 2 in \autoref{TrackVar}.\nl
  
 \begin{minipage}[H]{\linewidth}
-\begin{lstlisting}[caption = Variables used on the Track() thread., label = TrackVar, style = nc] 
+\begin{lstlisting}[caption = Variables used on the Track() thread., label = TrackVar] 
 task Track(){
-    int bt[10];
+    int bt[10];	//hey test
     int bl[10];
     int bc[10];
     int bb[10];
