--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -194,15 +194,11 @@
 \definecolor{javaKeywords}{HTML}{7F0055}
 \definecolor{diff}{HTML}{c5c5c5}
 
-\lstdefinestyle{cswc}%
-{
-  morecomment  = [is]{//}{\ \ \ \ },
-  %morecomment  = [l][\nullfont]{//},
-  morecomment  = [is]{/*}{*/}
-}
-
 \lstdefinestyle{nc}%
 {
+  morecomment  = [l]{//},
+  %morecomment  = [l][\nullfont]{//},
+  morecomment  = [is]{/*}{*/}
 }
 
 \lstset{ %
