--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -24,6 +24,7 @@
 
 \part{Testing}
 \inputS{Testing/UnitTest}
+\inputS{Testing/HitTest}
 \part{Evaluation}
 \input{sections/Conclusion/InputConc.tex}
 %Physics of shooting
