-  Added all comments from Brain

--- a/sections/Design/RepresentationScheme.tex
+++ b/sections/Design/RepresentationScheme.tex
@@ -1,14 +1,14 @@
-\section{Data Representation}\label{RepScheme}
+\fix{\section{Data Representation}}{Better title: contains more than that: Tracking and positioning?}\label{RepScheme}
 As \name needs to track the location of an object in a three dimensional world,
 it needs a consistant way to represent this data. This data comes in the form
-of images from the camera, distance readings from the ultrasonic sensors and
-the turrets relative angle, which is read from the motors. Given that all of
-this data is relative to the turret location, we can create a representation
+of \fix{images from the camera}{Måske en table, med sensor navn, data og
+enheder}, distance readings from the ultrasonic sensors and the turrets relative
+angle, which is read from the motors. Given that all of this data is relative to the turret location, we can create a representation
 scheme where the turret is the center of a 2-dimensional coordinate system. An
 example of this can be seen below in \autoref{CoordinateSystem}.\nl
 
 \figx[0.35]{CoordinateSystem}{Example of the turret standing in the middle of an
-x,y coordinate system.}
+x,y coordinate system.}\fix{}{\autoref{CoordinateSystem2} er tilstrækkelig}
 
 By using the distance to the target and the angle of the turret, we are able to
 calculate the location of the target in our 2-dimensional coordinate system.
@@ -28,13 +28,14 @@ is used to find the x-coordinate and cosine is used to determine the
 y-coordinate. This is because the turrets coordinate system is rotated 90
 degrees counter clockwise, as the turrets starting direction is read as an angle
 of 0 degrees. This calculation is shown below in \autoref{CoordinateSystem2}.
+\fix{}{Tjah forkommer enklere med at ændre start vinklen}
 
 \figx{CoordinateSystem2}{Sine and cosine are used to calculate positions
 in the representation scheme.}
 
 When the turret has registered a number of data points, a vector is
-calculated to get the distance that the target has travelled. This vector is
-then divided by the time it takes the target to travel the distance, to get a
+\fix{calculated}{compute} to get the distance that the target has travelled.
+This vector is then divided by the time it takes the target to travel the distance, to get a
 new vector that represents the velocity of the target in $\frac{cm}{ms}$. This
 vector is then multiplied by a given number of milliseconds, in order to
 calculate a point in the coordinate system where the target is going to be in
@@ -64,12 +65,16 @@ angle the following equation is used:
 a_{vertical}=0.2573*distance-22.85
 \end{equation} 
 
+\fix{}{what error do you introduce}
+
 \fix{This function based on a best fit line that was extrapolated from a set of
 test data, where the angle was plotted against how far the projectile
 travelled.}{Need a reference to a test} This function is an estimate of the
 function needed in order to get the angle. This is because the exact function
 is \fix{too complex for the NXT to calculate}{maybe mention why / refere to
 physics} in the available time.\nl
+
+\fix{}{Explain Why! trigonometric fucntions may also be costly}
 
 \name also needs to know when to shoot in order to hit the target.
 This is calculated by subtracting the value of \autoref{TimeEq}, which is described in
