--- a/sections/Implementation/FPosCalc.tex
+++ b/sections/Implementation/FPosCalc.tex
@@ -1,4 +1,4 @@
-\section{Calculate Future Position}
+\section{Calculate Future Position}\fix{}{Already explained?!}
 As the turret needs to calculate the future position of the target, we need to
 implement a model for executing these computations to an acceptable degree. In
 \name this is done by calculating vectors between different points where the
