--- a/sections/Implementation/NXCLang.tex
+++ b/sections/Implementation/NXCLang.tex
@@ -8,6 +8,8 @@ respective documentation \cite{NXCIntro}. As described in the NXC documentation,
 the langage has a limited selection of data types \cite{NXCVariables}. An exaple
 of a short program written in NXC can be seen below in \autoref{NXCExample}.\nl
 
+\fix{}{more precise restrictions/changes!}
+
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = Exaple of a program written in the NXC language, label = NXCExample] 
 #include "nxtcamlib-default.nxc"
@@ -28,6 +30,7 @@ task search(){
 }
 \end{lstlisting}
 \end{minipage}
+\fix{}{Should be your program}
 
 As exemplified in \autoref{NXCExample} the NXC language is reminiscent of C, and
 the most notable differences come in the form of the inclusion of standard
