--- a/sections/Testing/UnitTest.tex
+++ b/sections/Testing/UnitTest.tex
@@ -7,8 +7,8 @@ principle as unit testing in fx. C\#. When testing an object oriented
 language, the testing is done on class by class level as this gives a clear
 distinction between the different methods. This however is not the case in NXC,
 as the language follows the imperative programming paradigm. In our testing
-setup, only functions with a return value is tested and functions which uses
-input from the sensors are not tested. The basic principle is Arrange, Act and
+setup, \fix{only functions with a return value is tested}{You ought not have
+others?!Out Values?Stubs/mocks?} and functions which uses input from the sensors are not tested. The basic principle is Arrange, Act and
 Assert. In the arrange step the input data is constucted as well as what the
 expected output is. In the act step, the functions are called and the inputs are
 saved. Then finaly in the assert step the outputs are verified arcording to the
@@ -49,9 +49,12 @@ defined yet. This is defined in the assert part as this was the easiest way to
 do it. On \textbf{Line 16}, the tested function is called and in this case the
 output is put into a struct called DirectionVector. Then finaly we use an if
 statement to check the output against the expected and if the output coresponds
-to the expected we return true. This return value is then used to print the
-value on the screen of the NXT to have a way of representing the test results.
+to the expected we return true. This return value is then used to \fix{print the
+value on the screen of the NXT to have a way}{log fil?}of representing the test
+results.
 \nl
+
+\fix{}{oversigt over test}
 
 To conclude all the tests succeeded, one of the tests we had some issues as our
 calculations differed a little bit from the calculations made by the NXT. These
