--- a/sections/Design/RepresentationScheme.tex
+++ b/sections/Design/RepresentationScheme.tex
@@ -97,7 +97,7 @@ This is calculated by subtracting the value of \autoref{RSTimeEq}, which is desc
 t=\frac{x}{v_0*cos(a)}
 \end{equation}
 This gives the time where \name needs to shoot to be able to hit the target.
-This is calculated in the function CalcFireData.nl
+This is calculated in the function CalcFireData.\nl
 
 In conclusion, by using a combination of this representation scheme and
 trigonometry, the turret is capable of modelling the world around it such that
