--- a/sections/Design/RepresentationScheme.tex
+++ b/sections/Design/RepresentationScheme.tex
@@ -105,4 +105,5 @@ it can accurately determine and predict the location of the target. This
 approach of mapping data to determine a function does cause som inaccuracies, as
 the resulting function is linear, while the actual function would be a parabola.
 While this is a problem, the resulting function is still based on data from our
-tests, and as such should be accurate enough for this project.
+tests, and as such should be accurate enough for the smaller scope of this
+project.
