--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -74,6 +74,13 @@
   howpublished = {\url{https://www.moodle.aau.dk/pluginfile.php/837266/mod_resource/content/2/embedded-hardware-and-sensoractuators.pdf}}
 }
 
+@MISC{Hugin,
+  author = {},
+  title = {{Hugin Expert}},
+  year = {},
+  note = {Seen 09/12/2016},
+  howpublished = {\url{http://www.hugin.com/}}
+}
 
 @MISC{UNOSpecs,
 
