- Fixed a derp in the program  - Changed something in HitTest.tex

--- a/sections/Testing/HitTest.tex
+++ b/sections/Testing/HitTest.tex
@@ -18,11 +18,11 @@ shot is fired.
 
 \section{Test Evaluation}
 The result of the test can be seen in \autoref{table:accuracy}. Here it can be
-seen that the turret only hits 4 out o 24 times it actual fires, in the case of
+seen that the turret only hits 3 out o 24 times it actual fires, in the case of
 a distance of 1.5m the ultrasonic sensor would not measuer a distance to the
-target, and therefor no futher test at the range was conduted. But of the 4
-shots that hit the target, 3 was from the dataset where the power was 40\% and
-the distance 0.5m  In conclusion \names  had an accuracy of 16.67\%.
-\fix{}{I know we hit 4 times, but excel says 3 times. WTF!!}
+target, and therefor no futher test at the range was conduted. But all of the
+3 shots that hit the target was from
+the dataset where the power was 40\% and the distance 0.5m  In conclusion \names
+had an accuracy of 12.5\%.
 
 \dataTable{accuracy}{Data from the accuracy test}{accuracy}
