--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -13,4 +13,4 @@ tracking, distance measurement and fireing.
 \input{sections/Implementation/Tracking.tex}
 \input{sections/Implementation/GetDataAndCalculate.tex}
 \input{sections/Implementation/WaitAndFire.tex}
-\input{sections/Implementation/FPosCalc.tex}
+% \input{sections/Implementation/FPosCalc.tex}
