--- a/sections/Implementation/Tracking.tex
+++ b/sections/Implementation/Tracking.tex
@@ -161,10 +161,16 @@ Aside from determining the direction, the turret also needs to determine at
 which speed it should rotate to match the target. This is calculated in the
 \textc{GetSpeed method}, as shown in \autoref{GetZeSpeed}. This method
 takes the pixel count between the center of the camera and the blob, and outputs
-the resulting rotating speed. The \fix{sine function maps}{how?} the 144 pixel
-width of the camera to 90 degrees for a sine function. This way the speed should follow a
-sine curve, and as such should get slower the closer to the target, and faster
-the farther away.\nl
+the resulting rotating speed between 1 and \texttt{MaxSpeed}. The sine function
+maps the 144 pixel width of the camera to 90 degrees for a sine function. This is shown below in
+\autoref{sineF}.
+
+\begin{equation}\label{sineF}
+speed = sin(\frac{90}{PixelWidth})*MaxSpeed
+\end{equation} 
+
+By using this approach, the speed should follow a sine curve, and as such
+should get slower the closer to the target, and faster the farther away.\nl
 
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = Determine speed to rotate using a sine function, label = GetZeSpeed] 
