--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -16,6 +16,8 @@
 \part{Design}
 \input{sections/Design/Design.tex}
 \input{sections/Design/BNDesig/DesignBN.tex}
+\input{sections/Design/BNDesig/DomainsAndProbs.tex}
+
 
 \part{Implementation}
 \input{sections/Implementation/Implementation.tex}
