--- a/sections/Requirements/ProblemStatement.tex
+++ b/sections/Requirements/ProblemStatement.tex
@@ -14,9 +14,9 @@ hardware limitations, and that it should be constructed for a single purpose,
 in this case: hitting a moving target. The system also needs to have some
 intelligence, this should be done through a belief network in the form a hidden
 markov model. This allows it to make predictions based on what it can
-observe. It needs to stick to its \fix{deadlines}{What deadlines?}, in order to
-make sure it fires at just the right time such that it hits the target at the predicted
-position, as described in \autoref{SystemDescription}.\nl
+observe. It needs to have a timer, which can be used along with the data from
+the sensors so the turret can shoot at the predicted time as seen in
+\autoref{SystemDescription}.\nl
 
 In regards to hitting a target in motion, \autoref{ProjPhys} was used to
 clarify the necessary theory for the project. This information is used to
