--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -1,2 +1,14 @@
 \chapter{Discussion}
-Blah!\ldots \ToDo
+\begin{itemize}
+  \item Vi har ingen kontrol over skedulering. Andet OS eller Sprog.
+  \item Track og GetDataAndCalculate bør ikke køre samtidigt. Den ene starter
+  den anden, og holder den kun åben i et tidsinterval.
+  \item Rigtigt kamera med vores egen software.
+  \item Sensorer er lort.
+  \item Tidsproblemer med at få MI implementeret.
+  \item Meget få målepunkter.
+  \item Programmet er ikke designet til at implemetere MI.
+  \item Kommunikation mellem computer og NXT.
+  \item Resultater fra tests.
+  \item \ldots
+\end{itemize}
