--- a/sections/Design/SystemArchitecture/SoftwareArch.tex
+++ b/sections/Design/SystemArchitecture/SoftwareArch.tex
@@ -19,4 +19,5 @@ software}
 It should be noted, that this model can not take into account the firmware
 implemented on the various sensors. This is the case, as this software is not
 well documented, and as such, we do not know how it functions.
+\fix{}{Make Sequence diagram!}
 
